--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/alex.png
+    - assets/micro.png
     - assets/thirsty crow.png
     - assets/CAP SELLER.png
 
